* Update model 303 to new format

Version 5.0.0 - 2018-10-01
* Bug fixes (see mercurial logs for details)
* Allow to export tax reports as file
* Remove support for Python 2.7

Version 4.8.0 - 2018-05-21
* Bug fixes (see mercurial logs for details)
* Remove unnecesary account and account types
* Simplify tax and tax code definition

Version 4.6.0 - 2017-10-30
* Initial release