@@ -1,0 +1,1 @@
+<T30302018020000><AUX>                                                                                                                                                                                                                                                                                                            </AUX><T30301000> CB01000009DUNDER MIFFLIN                                                                  2018022322         2222000000000000000000040000000000000000000000000000000000000100000000000000000000000000000000050000210000000000000001050000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000014000000000000000000000000000000000000005000000000000000000000000000000000000000000000000000000000000000001050000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000010500220                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               </T30301000><T30303000>00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000105010000000000000000000001050000000000000000000000000000000400000000000000000000N000000000000295000000000000000000N0000000000002950                                                            0    0    0    0    0    0     00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000                                                                                                                                                                                                                                                                                                                                                                                                                                                                               </T30303000></T30302018020000>
