@@ -1,3 +1,4 @@
+* Add amount to compensate from previous periods in 303 report
 * Update model 303 to new format
 
 Version 5.0.0 - 2018-10-01
